assets/css/style.css
/*general style rules*/
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: 'Bruno Ace SC', cursive;
    background: url(../images/orion-nebula-11107_1920.jpg);
}

h1, h2 {
    font-family: 'Archivo Black', cursive;
}

p {
    letter-spacing: 1px;
}

/*Nav Bar Header*/
#logo {
    float: left;
    letter-spacing: 2px;
    font-size: 300%;
    color: black;
    font-family: 'Extrude', 'Bruno Ace SC', cursive;
}

#navbar {
    width: 100%;
    height: 75px;
    background-color: white;
    position: relative;
    top: 0;
    overflow: hidden;
}

#navbar-link{
    font-size: 120%;
    margin-bottom: 2px;
    line-height: 50px;
}

nav li {
    float: right;
    list-style-type: none;
    margin: 4px;
    letter-spacing: 2px;
    padding: 3px;
}

#navbar a {
    text-decoration: none;
    color: inherit;
}

#navbar li a:hover {
    color: green;
}

.active {
    color: green;
}

/*about us section*/
#about-us {
    width: 100%;
    height: 600px;
    overflow: hidden;
    text-align: center;
    background: url(../images/cool-geometric-triangular-figure-neon-laser-light-great-backgrounds.jpg) center center no-repeat;
    background-size: cover;
    padding-bottom: 10px;
}

.circle {
    width: 300px;
    height: 300px;
    border-radius: 50%;
    border: 2px solid black;
    display: inline-block;
    margin: 50px;
}

#xbox-circle {
    background: url('../images/Xbox-logo.jpg') no-repeat center center;
    width: 300px;
    height: 300px;
    border-radius: 50%;
    background-color: black;
}

#playstation-circle {
    background: url('../images/Playstation-logo.jpg') no-repeat center center;
    width: 300px;
    height: 300px;
    border-radius: 50%;
    background-size: cover;

}

#pc-circle {
    background: url('../images/PC-logo.jpg') no-repeat center center;
    width: 300px;
    height: 300px;
    border-radius: 50%;

}

.circle h2 {
    color: white;
    font-weight: bold;
    box-shadow: 0 0 10px 1px black;
    background-color: rgb(0, 0, 0, 0.7);
    border-radius: 2%;
}

.circle p {
    color: white;
    height: fit-content;
    margin-bottom: 1%;
    font-weight: bold;
    font-weight: bold;
    box-shadow: 0 0 10px 1px black;
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 2%;
}

/*welcome section*/

/*welcome general style*/
.welcome-container {
    width: 100%;
    height: 350px;
    color: white;
    text-align: center;
    margin: 30px 0;
    box-sizing: border-box;
}

.welcome-section {
    height: 350px;
    width: 50%;
    float: left;
    text-align: center;
    overflow: hidden;
    box-sizing: border-box;
    margin-bottom: 20px;
    background-color: rgba(32, 31, 32, 0.7);
    box-shadow: 0 0 10px 1px white;
    color:white;
}

.welcome-section h2 {
    font-family: 'Archivo Black', cursive;
    margin-top: 20px;
}

.welcome-section p {
    line-height: 15px;
    position: relative;
    top: 0px;
}
/*meetup time general style*/
.times-section {
    height: 350px;
    width: 50%;
    color: white;
    text-align: center;
    overflow: hidden;
    float: right;
    box-sizing: border-box;
    margin-bottom: 20px;
    background-color: rgba(32, 31, 32, 0.7);
    box-shadow: 0 0 10px 1px white;
}

.times-section h2 {
    font-family: 'Archivo Black', cursive;
    margin-top: 20px;
}

.meetup-left {
    width: 30%;
    height: 150px;
    display: inline-block;
    margin-top: 50px;
}

.meetup-center {
    width: 30%;
    height: 150px;
    border-left: 1px solid white;
    border-right: 1px solid white;
    display: inline-block;
    margin-top: 50px;
}

.meetup-right {
    width: 30%;
    height: 150px;
    display: inline-block;
    margin-top: 50px;
}

/*footer*/
#footer-container {
    width: 100%;
    height: 150px;
    background-color: rgb(249, 13, 26, 0.72);
    color: white;
    overflow: hidden;
    text-align: center;
    position: relative;
    bottom: 0;
}

footer div {
    margin-top: 40px;
}


footer i {
    font-size: 250%;
    text-decoration: none;
    color: black;
    padding: 15px;
}

#footer-left {
    display: inline-block;
    position: relative;
    left: -140px;
}

#footer-center {
    display: inline-block;
}

#footer-right {
    display: inline-block;
    position: relative;
    right: -140px;
}

/*sign up page*/

/*general style*/
#signup-body {
    background: url(../images/cool-geometric-triangular-figure-neon-laser-light-great-backgrounds.jpg) center center no-repeat;
}

/*sign up form*/
#signup-form {
    text-align: center;
    width: 400px;
    height: 400px;
    background-color: rgb(249, 13, 26, 0.72);
    padding: 10px 10px;
    margin-bottom: 40px;
    margin: 0 auto;
    position: relative;
    top: 150px;
    margin-bottom:40px;
}

form h1 {
    font-family: 'Bruno Ace SC';
    font-size: 140%;
    color: white;
    padding-bottom: 20px;
}

form label {
    color: white;
}

form label,
input {
    display: inline-block;
    width: 75%;
    box-shadow: 0 0 16px 2px black;
    margin-bottom: 7px;
}

form input {
    height: 25px;
    padding: 5px;
    margin-bottom: 15px;
    border-radius: 10%;
}

form select {
    box-shadow: 0 0 16px 2px black;
    height: 25px;
    padding: 5px;
    margin-top: 15px;
    margin-bottom: 15px;
    border-radius: 10%;
}

#submit-button {
    margin-top: 15px;
    font-family: 'Bruno Ace SC';
    color: white;
    background-color: black;
    box-shadow: 0 0 16px 2px rgba(4, 206, 4, 0.664);
    font-size: 110%;
    position: relative;
    bottom: 10px;
}

input:hover {
    box-shadow: 0 0 16px 2px rgba(10, 117, 28, 0.973);
}

input:focus {
    box-shadow: 0 0 16px 2px rgba(10, 117, 28, 0.973);
}

/*signup footer*/
#footer-signup {
    position: relative;
    bottom: 0;
    height: 150px;
    width: 100%;
}

#footer-signup div {
    margin-top: 30px;
}

#content{
    width:100%;
    height:100vh;
}

/*media queries*/

/*screen 1250px and less*/
@media screen and (max-width:1250px){
    #about-us {
            height: fit-content;
    }
}

/*screens 1150px or less*/
@media screen and (max-width:1550px) {
    .welcome-section {
        width: 100%;
    }

    .times-section {
        width: 100%;
        text-align: center;
        font-size: 90%;
    }

    #footer-left {
        left: -40px;
    }

    #footer-right {
        right: -40px;
    }
}

/*screens 900px or less*/
@media screen and (max-width:900px) {
    #logo {
        font-size: 270%;
    }

    #navbar{
        height:auto;
    }
    
    #navbar-link{
        clear: both;
        position: relative;
        float: left;
    }

    .times-section {
        font-size: 85%;
    }

    .welcome-section {
        font-size: 90%;
    }

    footer {
        font-size: 80%;
    }

    footer i {
        font-size: 200%;
        padding: 5px;
    }

    #footer-left {
        width: 30%;
    }

    #footer-center {
        width: 30%;
    }

    #footer-right {
        width: 30%;
    }
}

/*screens 700px or less */
@media screen and (max-width:700px) {
    #main-heading {
        font-size: 100px;
    }

    #footer-left {
        left: 0px;
    }

    #footer-right {
        right: 0px;
    }
}

/*screens 550px or less */
@media screen and (max-width:550px) {
    #xbox-container #playtation-container #pc-container {
        width: 65%;
    }

    .welcome-section {
        font-size: 85%;
    }

    .times-section {
        font-size: 75%;
    }

    #navbar-link{
        font-size:90%;
    }
}

/*screens 450px or less*/
@media screen and (max-width:450px) {
    footer {
        font-size: 70%;
    }

    footer i {
        font-size: 150%;
    }
}

/*screens 400px or less*/
@media screen and (max-width:400px) {
    #signup-form {
        width: 320px;
        height: 450px;
    }

    #navbar-link {
        font-size: 80%;
    }
}

/*screens 365px*/
@media screen and (max-width:365px) {
    #logo {
        font-size: 150%;
    }

    #navbar-link {
        font-size: 69%;
    }
    
    .circle {
        position: relative;
        left: -23px;
    }
    
    .welcome-section {
        font-size: 80%;
        height: 400px;
    }

    .times-section {
        font-size: 60%;
    }

    footer {
        font-size: 60%;
    }

    footer i {
        font-size: 140%;
    }

    #signup-form {
        width: 300px;
        height: 450px;
    }
}

/*screens 340px or less*/
@media screen and (max-width:340px){
    .circle {
            position: relative;
            left: -36px;
        }
}

/*screens 320px*/
@media screen and (max-width:320px){
    .circle {
            position: relative;
            left: -50px;
        }
}

/*screens 280px*/
@media screen and (max-width:280px){
    #footer-right{
        margin-right:21px;
    }

   #signup-form form{
    position:relative;
    right:14px;
   }

   #navbar{
    width:auto;
    }

    #navbar-link{
        width:auto;
    }
}

/*height media queries*/
/*920px or below*/
@media screen and (max-height:920px){
    #signup-form{
        position:relative;
        top:10px;
        font-size:10px;
        height:350px;
    }
}
/*800px or below*/
@media screen and (max-height:800px) {
    #navbar-link{
        font-size:91%;
    }
}

/*750px or below*/
@media screen and (max-height:740px){
    #navbar-link{
        font-size:88%;
    }
}

/*660px or below*/
@media screen and (max-height:660px){
    #navbar-link{
        font-size:60%;
    }

    #signup-form{
        height:360px;
    }

    #footer-signup div{
        margin:0;
    }

    #footer-signup #footer-container{
        position:relative;
        bottom:0;
    }

}

/*height 570px or below*/
@media screen and (max-height:570px){
    #signup-form{
        height:270px;
    }

    form input{
        height:10px;
        margin-bottom:8px;
    }

    #submit-button{
        height:20px;
        bottom:15px;
    }

}

